<resources>
    <string name="app_name">Macro Project</string>
    <string name="login">Login</string>
    <string name="gamify">Gamify</string>
    <string name="task">Task</string>
    <string name="dailies">Dailies</string>
    <string name="habit">Habit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Belum punya akun? Register!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="Dailies">ini Fragment untuk Dailies</string>
    <string name="fragment_task">Fragment Task</string>
    <string name="fragment_habit">Fragment Habit</string>
    <string-array name="feelings">
        <item>Person</item>
        <item>School</item>
    </string-array>

    <string-array name="repeat">
        <item>Weekly</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="weekly">
        <item>1 Weeks</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
    </string-array>

    <string name="menu">Gamify Menu</string>
    <string name="Shop">Shop</string>
    <string name="Inventory">Inventory</string>
    <string name="Social">Social</string>
    <string name="buy">Buy</string>
    <string name="i1">Icon 1</string>
    <string name="i2">Icon 2</string>
    <string name="i3">Icon 3</string>
    <string name="i4">Icon 4</string>
    <string name="i5">Icon 5</string>
    <string name="i6">Icon 6</string>
    <string name="i7">Icon 7</string>
    <string name="i8">Icon 8</string>
    <string name="i9">Icon 9</string>

    <string name="list_habit">List Habit</string>
    <string name="task_title">Task Title</string>
    <string name="notes">Notes</string>
    <string name="difficulty">Difficulty</string>
    <string name="v_hard">V.Hard</string>
    <string name="checkpoint">Checkpoint</string>
    <string name="add_new_checkpoint">Add new Checkpoint</string>
    <string name="list_is_empty">List is Empty</string>
    <string name="olahraga">Olahraga</string>


</resources>