<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/green"
        android:layout_width="410dp"
        android:layout_height="170dp"
        android:background="#258329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/exit"
        android:layout_width="45dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


    <ImageView
        android:id="@+id/cari"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/social"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/Shop"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/inventory"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/Inventory"
        android:textAlignment="center"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/shop"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/social"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/Social"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/inventory"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <TextView
        android:id="@+id/icon1"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/i1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/green" />

    <TextView
        android:id="@+id/icon2"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/i2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/icon1" />

    <Button
        android:id="@+id/buy1"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="36dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon1"
        app:layout_constraintTop_toBottomOf="@+id/social" />

    <Button
        android:id="@+id/buy2"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon2"
        app:layout_constraintTop_toBottomOf="@+id/buy1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    <TextView
        android:id="@+id/icon3"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/i3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/icon2" />
    <Button
        android:id="@+id/buy3"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon3"
        app:layout_constraintTop_toBottomOf="@+id/buy2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    <TextView
        android:id="@+id/icon4"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/i4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/icon3" />
    <Button
        android:id="@+id/buy4"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon4"
        app:layout_constraintTop_toBottomOf="@+id/buy3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/icon5"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/i5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/icon4" />

    <Button
        android:id="@+id/buy5"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon5"
        app:layout_constraintTop_toBottomOf="@+id/buy4" />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/icon6"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/i6"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/icon5" />

    <Button
        android:id="@+id/buy6"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon6"
        app:layout_constraintTop_toBottomOf="@+id/buy5" />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/icon7"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/i7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/icon6" />

    <Button
        android:id="@+id/buy7"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon7"
        app:layout_constraintTop_toBottomOf="@+id/buy6" />
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/icon8"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/i8"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/icon7" />

    <Button
        android:id="@+id/buy8"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@+id/icon8"
        app:layout_constraintTop_toBottomOf="@+id/buy7" />
    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/icon9"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/i9"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView9" />

    <Button
        android:id="@+id/buy9"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon9" />



 </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>