<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/green"
        android:layout_width="410dp"
        android:layout_height="170dp"
        android:background="#258329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="45dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


    <ImageView
        android:id="@+id/cari"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/social"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/Shop"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/inventory"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/Inventory"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/shop"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/social"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/Social"
        android:textAlignment="center"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/inventory"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/s1"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:background="#B1B7BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory" />
    <ImageView
        android:id="@+id/s2"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:background="#B1B7BD"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1" />
    <ImageView
        android:id="@+id/s3"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:background="#B1B7BD"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s2" />
</androidx.constraintlayout.widget.ConstraintLayout>