<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HabitPopUpFragment">

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_edit_habit"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:padding="10dp"
        android:text="@string/task_title"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="257dp"
        android:layout_height="91dp"
        android:background="@drawable/background_edit_habit"
        android:gravity="top|start"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitle" />

    <ImageView
        android:id="@+id/positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes" />

    <ImageView
        android:id="@+id/negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notes"
        android:layout_marginStart="62.5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/positive"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_remove"/>

    <ImageView
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/notes"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/difficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/positive" />

    <ImageView
        android:id="@+id/easyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/diff_easy"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginStart="37dp"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Easy"
        app:layout_constraintEnd_toEndOf="@+id/easyLogo"
        app:layout_constraintStart_toStartOf="@+id/easyLogo"
        app:layout_constraintTop_toBottomOf="@id/easyLogo" />

    <ImageView
        android:id="@+id/mediumLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/easyLogo"
        android:src="@drawable/diff_medium"
        app:layout_constraintStart_toEndOf="@+id/easyLogo"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mediumLogo"
        android:layout_alignStart="@+id/mediumLogo"
        android:layout_marginTop="10dp"
        android:text="Medium"
        app:layout_constraintEnd_toEndOf="@+id/mediumLogo"
        app:layout_constraintStart_toStartOf="@+id/mediumLogo"
        app:layout_constraintTop_toBottomOf="@+id/mediumLogo" />

    <ImageView
        android:id="@+id/hardLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/mediumLogo"
        android:src="@drawable/diff_hard"
        app:layout_constraintStart_toEndOf="@+id/mediumLogo"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hardLogo"
        android:layout_alignStart="@+id/hardLogo"
        android:text="Hard"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/hardLogo"
        app:layout_constraintStart_toStartOf="@+id/hardLogo"
        app:layout_constraintTop_toBottomOf="@+id/hardLogo" />

    <ImageView
        android:id="@+id/very_hardLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/hardLogo"
        android:src="@drawable/very_hard"
        app:layout_constraintStart_toEndOf="@+id/hardLogo"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="10dp"
        android:text="@string/v_hard"
        app:layout_constraintEnd_toEndOf="@+id/very_hardLogo"
        app:layout_constraintStart_toStartOf="@+id/very_hardLogo"
        app:layout_constraintTop_toBottomOf="@+id/very_hardLogo"/>

    <TextView
        android:id="@+id/checkpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/checkpoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficulty" />

    <EditText
        android:id="@+id/addCheckpoint"
        android:layout_width="257dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_edit_habit"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:text="@string/add_new_checkpoint"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/checkpoint"
        app:layout_constraintTop_toBottomOf="@id/checkpoint" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_marginTop="84dp"
        android:backgroundTint="#9B998E"
        android:text="Create"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/addCheckpoint"
        app:layout_constraintTop_toBottomOf="@+id/addCheckpoint" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/button_create"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>